--- a/public/robotj.html
+++ b/public/robotj.html
@@ -42,8 +42,7 @@
 </head>
 
 <body>
-    <div id="container" onmouseup="mouseUp()" onmousedown="mouseDown()"></div>
-    <div id="info">
+    <div id="container" ontouchend="mouseUp()" ontouchstart="mouseDown()" onmouseup="mouseUp()" onmousedown="mouseDown()"></div><div id="info">
 
         <span id="result"></span>
     </div>
