--- a/server/wwwroot/serialMonitor.html
+++ b/server/wwwroot/serialMonitor.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
-    
-   
+
+
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -16,19 +16,20 @@
     </style>
   </head>
   <body>
+    <p>Messages</p>
     <ul id="messages"></ul>
-   
+
    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/js/socket.io.js" type="text/javascript"></script>
 <script>
   var socket = io();
-  
+
     socket.on('serialData', function(msg){
     $('#messages').prepend($('<li>').text(msg));
-    
+
   });
 </script>
-   
+
   </body>
 </html>
