--- a/server/wwwroot/test.html
+++ b/server/wwwroot/test.html
@@ -27,6 +27,7 @@
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
+          console.log($('#m').val())
           return false;
         });
         socket.on('chat message', function(msg){
